Fixed nav drawer z-index with respect to footer, for proper box shadow display

--- a/styles.css
+++ b/styles.css
@@ -260,6 +260,7 @@ footer {
 
   .nav-shim {
     max-width: 256px;
+    z-index: 5;
   }
 
   .nav-shim-shown {
